--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
-  <link rel="icon" type="image/png" href="./favicon.png">
   <title>Historic Spots in Seville</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <!-- Load Leaflet CSS and JS-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
